# msm

./: .clangd  .gitignore  CMakeLists.txt  README.md  SimulationParameters_and_SimBuilder.cpp  appendix.typ  builder.cpp  main.cpp  makefile  parameters.cpp  simulation_parameters.cpp  small_snippet_testing.cpp  test.cpp  v3.cpp  v3.h
python/: main.py  pyproject.toml
